# aos-ga-framework

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  references.bib
.github/workflows/: ci.yml
data/: README.md
data/knapsack/: manifest.json  n20_strongly.json  n20_uncorrelated.json  n20_weakly.json  n30_strongly.json  n30_uncorrelated.json  n30_weakly.json  n50_strongly.json  n50_uncorrelated.json  n50_weakly.json  optima.json
data/seeds/: seeds.json
data/tsplib/: eil22.opt.tour  eil22.tsp  manifest.json
experiments/: __init__.py
experiments/baselines/: __init__.py  cga_continuous_plot.py  cga_continuous_report.py  cga_knapsack_plot.py  cga_knapsack_report.py  cga_tsp_plot.py  cga_tsp_report.py  fbo_oracle.py  fbo_report.py  random_report.py
experiments/configs/: README.md  __init__.py  families.py  pools.py
experiments/datasets/: __init__.py  exact_knapsack.py  exact_tsp.py  knapsack.py  knapsack_build.py  seeds.py  tsplib.py  tsplib_build.py
experiments/problems/: __init__.py  continuous.py  knapsack.py  tsp.py
experiments/strategies/: __init__.py  pm_report.py
experiments/tests/: test_aos_pm_smoke.py  test_cga_continuous_plot.py  test_cga_continuous_report.py  test_cga_continuous_smoke.py  test_cga_knapsack_plot.py  test_cga_knapsack_report.py  test_cga_knapsack_smoke.py  test_cga_tsp_plot.py  test_cga_tsp_report.py  test_cga_tsp_smoke.py  test_continuous_problem.py  test_exact_knapsack.py  test_exact_tsp.py  test_fbo_oracle.py  test_fbo_report.py  test_knapsack_build.py  test_knapsack_dataset_integrity.py  test_knapsack_loader.py  test_knapsack_problem.py  test_operator_pools.py  test_pm_report.py  test_random_report.py  test_results_regression.py  test_seeds.py  test_study_package.py  test_tsp_problem.py  test_tsplib_build.py  test_tsplib_dataset_integrity.py  test_tsplib_loader.py  test_tsplib_parser.py
replication/: README.md  requirements-lock.txt
results/: README.md
results/aggregated/: aos_pm.csv  cga_continuous.csv  cga_knapsack.csv  cga_tsp.csv  fbo_operators.csv  fbo_oracle.csv  random_baseline.csv
src/aos_ga/: __init__.py  cli.py  constants.py  rng.py
src/aos_ga/analysis/: __init__.py
src/aos_ga/aos/: __init__.py  probability_matching.py  strategy.py
src/aos_ga/config/: __init__.py
src/aos_ga/core/: __init__.py  engine.py  operator.py  problem.py  representation.py  variation.py
src/aos_ga/credit/: __init__.py  instant.py
src/aos_ga/ga/: __init__.py
src/aos_ga/metrics/: __init__.py
src/aos_ga/operators/: __init__.py  binary.py  permutation.py  real.py
src/aos_ga/recording/: __init__.py
src/aos_ga/runner/: __init__.py
src/aos_ga/variation/: adaptive_operator.py  canonical.py  random_operator.py  single_operator.py
src/aos_ga/viz/: __init__.py
tests/: conftest.py  test_aos_strategy.py  test_credit_instant.py  test_engine.py  test_operator.py  test_operators_binary.py  test_operators_permutation.py  test_operators_real.py  test_package.py  test_probability_matching.py  test_problem.py  test_rng.py  test_variation.py  test_variation_adaptive_operator.py  test_variation_canonical.py  test_variation_random_operator.py  test_variation_single_operator.py
