[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aos-ga"
dynamic = ["version"]
description = "Adaptive operator selection for genetic algorithms under tight evaluation budgets."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Damian Wiśniewski", email = "dev@thehardway.pl" }]
keywords = [
    "genetic-algorithm",
    "adaptive-operator-selection",
    "aos",
    "evolutionary-computation",
    "multi-armed-bandit",
    "credit-assignment",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
# The engine has exactly one runtime dependency. The range is the compatibility
# contract of the library and is what the CI matrix exercises across Python
# 3.10-3.13; it is deliberately NOT the reproducibility contract. `Generator`
# streams may change between NumPy feature releases (NEP 19 freezes only the
# legacy `RandomState`), so reproducing the recorded results bit-for-bit requires
# the exact versions pinned in `replication/requirements-lock.txt`.
dependencies = [
    "numpy>=2.0,<3",
]

[project.optional-dependencies]
# Data IO, statistics and plotting used by the recording, analysis and viz
# layers and by the experiment study. Kept out of the core install so the
# engine stays lightweight; required to run the analysis pipeline and the study.
analysis = [
    "pandas>=2.0,<3",
    "pyarrow>=15",
    "scipy>=1.13",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.13",
]

[project.scripts]
aos-ga = "aos_ga.cli:main"

[tool.hatch.version]
path = "src/aos_ga/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aos_ga"]

# Explicit allow-list for the source distribution. Only the framework library
# and its furniture ship in the package; the experiment study, datasets and
# results are research artifacts and are intentionally excluded.
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/CITATION.cff",
    "/references.bib",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "experiments", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["aos_ga", "experiments"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "experiments/tests"]
pythonpath = ["src", "."]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "heavy: requires the 'analysis' optional dependencies (pandas/pyarrow/scipy/matplotlib/seaborn)",
]

[tool.coverage.run]
source = ["aos_ga"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
# 3.12, not the 3.10 floor: recent NumPy stubs use PEP 695 `type` statements,
# which mypy only parses under python_version >= 3.12. Runtime compatibility with
# 3.10+ is covered by the pytest CI matrix.
python_version = "3.12"
strict = true
files = ["src", "experiments", "tests"]

[[tool.mypy.overrides]]
module = ["seaborn"]
ignore_missing_imports = true
